cmake_minimum_required(VERSION 3.12)
project(c_plus_plus_yellow_final_assignment)

set(CMAKE_CXX_STANDARD 17)

add_executable(c_plus_plus_yellow_final_assignment main.cpp token.h token.cpp condition_parser.cpp condition_parser.h test_runner.cpp test_runner.h date.cpp date.h database.cpp database.h node.cpp node.h)